# sample-ap

./: .gitignore  pyproject.toml
database/: schema.sql
sample_app/: __main__.py  app.py  db.py  models.py  repositories.py
